--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" type="image/png" href="img/icon.ico"  />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 
@@ -18,7 +18,7 @@
         <div class="container">
 
             <a class="navbar-brand" href="http://tuvidanueva.org">
-                <img src="img/icon.png" style="height: 46px; width: 48px;" alt="">
+                <img src="img/icon.png" alt="">
                 Vida Nueva</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -172,7 +172,7 @@
             </div>
 
             <footer class="text-center text-light">
-                <small>Made with <span><img class="footer-logo" src="img/icon.png" style="height: 22px; width: 23px;" alt=""></span> in San Leandro</small>
+                <small>Made with <span><img class="footer-logo" src="img/icon.png" alt=""></span> in San Leandro</small>
             </footer>
 
             <!-- <div class="section-blue">
