Finished adding all web app projects

--- a/index.html
+++ b/index.html
@@ -1,210 +1,76 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!doctype html>
+<html lang="en">
 <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Vida Nueva</title>
-
-    <link rel="shortcut icon" type="image/png" href="img/icon.ico"  />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
+    <title>Guillermo Sanchez</title>
 </head>
-
 <body>
 
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-        <div class="container">
+    <div class="container">
+        <div class="row">
+            <div class="col">
 
-            <a class="navbar-brand" href="http://tuvidanueva.org">
-                <img src="img/icon.png" alt="">
-                Vida Nueva</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="crece.html">Crece</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="kids.html">Niños</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Jovenes</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-        <header class="header-main">
-            <div class="container">
-                <div class="row">
-                    <div class="col text-center text-light">
-
-                        <h1> BIENVENIDO </h1>
-                        <p> Te hemos estado esperando! </p>
-                        <a class="btn btn-light"  href="https://www.youtube.com/channel/UC_aDAeNyjmPONJC0Vfxlsgg" role="button"> Predicas  </a>
-
-                    </div>
-                </div>
-            </div>
-        </header>
-
-        <div class="section-white">
-            <div class="container">
-                <div class="row">
-                    <div class="col text-center">
-                        <h3> Nuestra Vision </h3>
-                        <p>Esta es una denominación eminentemente pentecostal en su doctrina
-                            y forma de adoración. La Iglesia Cuadrangular se llama así porque la doctrina
-                            de la iglesia reconoce cuatro aspectos principales de Jesucristo. </p>
-
-                            <p>
-                                <a class="btn btn-info" data-toggle="collapse" href="#vision-collapse" role="button" aria-expanded="false" aria-controls="collapseExample">
-                                    Leer más
-                                </a>
-                            </p>
-
-                            <div class="collapse" id="vision-collapse">
-                                <div class="card-deck">
-
-                                    <div class="card">
-                                        <img class="card-img-top vision-icon" src="img/vision/cruz.jpg" alt="Card image cap">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Jesucristo: el Salvador</h5>
-                                            <p class="card-text">El Primer y más importante aspecto de la doctrina Cuadrangular es que Jesucristo es el único medio de la salvación para la persona. La salvación no es por obras sino por gracia por medio de la fe, nadie se puede salvar a sí mismo. Efesios 2:8</p>
-                                            <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
-                                        </div>
-                                    </div>
-
-                                    <div class="card">
-                                        <img class="card-img-top" src="img/vision/copa.jpg" alt="Card image cap">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Jesucristo: el Sanador</h5>
-                                            <p class="card-text">La Salvación, el perdón de los pecados no es el final de todo lo que Jesús puede y quiere hacer por la persona. Una vez convertidos a Él, la persona puede ser llena del Espíritu Santo y tener la evidencia de ese bautismo a través de la manifestación de los 9 dones mencionados en 1 Corintios 12.</p>
-                                        </div>
-
-                                    </div>
-                                    <div class="card">
-                                        <img class="card-img-top" src="img/vision/paloma.jpg" alt="Card image cap">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Jesucristo: el Bautizador con el Espíritu Santo</h5>
-                                            <p class="card-text">En la Cruz del Calvario Jesús llevó nuestros pecados y también nuestros dolores y enfermedades. Nos a prometido que por su llagas somos curados. Podemos ser sanados sobrenaturalmente de nuestras enfermedades físicas por medio del Poder de Dios. Isaias 53</p>
-                                        </div>
-                                    </div>
-
-                                    <div class="card">
-                                        <img class="card-img-top" src="img/vision/corona.jpg" alt="Card image cap">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Jesucristo: el Rey que viene</h5>
-                                            <p class="card-text">Jesucristo regresa pronto a reinar. La Biblia le llama Rey de reyes y Senor de senores. Esta es la maravillosa esperanza que tenemos. Apocalipsis 22</p>
-                                        </div>
-                                    </div>
-
-                                </div>
-
-                            </div>
-
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="section-pastor">
-
-                <div class="container">
-                    <div class="row">
-                        <div class="col text-center text-light">
-
-                            <h1> NUESTROS PASTORES </h1>
-                            <h4 class="font-weight-light"> Mario + Soraya Zambrano</h4>
-                            <br>
-                            <p class="">Nuestros pastores, Mario y Soraya, tienen un corazón enfocado en alcanzar a la comunidad en nuestro alrededor y más allá con el mensaje de Jesús que transforma vidas. Ellos creen en el desarrollo de la madurez espiritual y familiar, la educación, y el desarrollo del carácter cristiano por medio de la Fe.</p>
-
-                        </div>
-                    </div>
-                </div>
+                <h1>Hello, world!</h1>
+                <p>
+                    Below is a list of applications that I've worked on.
+                    *Not all projects are listed here (i.e. mobile apps or scripts).
+                    Here you will mostly find web apps/websites.
+                </p>
 
             </div>
-
-            <div class="section-light">
-
-                <div class="container text-center">
-                    <div class="row">
-                        <div class="col">
-                            <h2> Horario de Reuniones </h2>
-                            <br>
-                            <!-- <p class="">Nuestros pastores, Mario y Soraya, tienen un corazón enfocado en alcanzar a la comunidad en nuestro alrededor y más allá con el mensaje de Jesús que transforma vidas. Ellos creen en el desarrollo de la madurez espiritual y familiar, la educación, y el desarrollo del carácter cristiano por medio de la Fe.</p> -->
-                        </div>
-                    </div>
-                    <div class="row">
-                        <!-- <div class="col"></div> -->
-
-                        <div class="col">
-                            <h4> Domingos </h4>
-                            <p class="font-weight-light"> Main Sanctuary </p>
-                            <p class="font-weight-light"> 577 Manor Blvd </p>
-                            <p class="font-weight-light"> San Leandro, CA 94579 </p>
-                            <p class="font-weight-bold"> 3:00 pm </p>
-                        </div>
-
-                        <div class="col">
-                            <h4> Viernes </h4>
-                            <p class="font-weight-light"> Kidz Building </p>
-                            <p class="font-weight-light"> 577 Manor Blvd </p>
-                            <p class="font-weight-light"> San Leandro, CA 94579 </p>
-                            <p class="font-weight-bold"> 7:30 pm </p>
-                        </div>
-
-                        <!-- <div class="col"></div> -->
-                    </div>
-                    <br>
-                    <a class="btn btn-info"  href="https://goo.gl/maps/6YPVJpTji6L2" role="button"> Direcciones  </a>
-
-                </div>
-
-            </div>
-
-            <footer class="text-center text-light">
-                <small>Made with <span><img class="footer-logo" src="img/icon.png" alt=""></span> in San Leandro</small>
-            </footer>
-
-            <!-- <div class="section-blue">
-            <div class="section-blue first-section">
-            <div class="container">
-            <div class="row">
-            <div class="col text-center">
-            <p>Nuestra Vision</p>
-
         </div>
     </div>
-</div>
-</div>
-</div> -->
 
 
-<!-- Setting up container template -->
-<!-- <div class="container">
-<div class="row">
-<div class="col">4Columns</div>
-<div class="col">4Columns</div>
-<div class="col">4 Columns</div>
-</div>
-</div> -->
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="script.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <div class="section-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col">
 
 
+                    <div class="card">
+                        <div class="card-header">
+                            Projects
+                        </div>
+
+                        <div class="card-body">
+                            <ul>
+                                <!-- <li><a href="#">  </a></li> -->
+                                <li><a href="http://food-sentiments.herokuapp.com/"> Food Sentiments </a> – Web app that performs a sentiment analysis on Yelp reviews of businesses.</li>
+                                <li><a href="http://clubs.uci.edu/codepath"> CodePath at UCI </a> – Website I made for UCI students to help them throughout CodePath's iOS Development course.</li>
+                                <li><a href="http://just-write-cssi.appspot.com/"> Just Write </a> – Web app that allows writers to get inspired to write and share stories </li>
+                                <li><a href="http://antsearch.herokuapp.com/"> AntSearch </a> – Search Engine that searches through UC Irvine's school of ICS. </li>
+                                <li><a href="http://tuvidanueva.org/"> Vida Nueva </a> – beautifully-made website for my local church. </li>
+                                <li><a href="concentration/index.html"> Concentration </a> – Concentration game built with just JavaScript. </li>
+                                <li><a href="http://guillermo-sanchez.com"> My Personal Website </a> – Personal website (under improvements) </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
 
 
+
+
+
+
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
